--- a/config
+++ b/config
@@ -20,8 +20,14 @@ shell-integration = fish
 command = /usr/bin/fish
 
 # Clipboard
-clipboard-read = allow
+clipboard-read = ask
 clipboard-write = allow
 
 # Misc
 confirm-close-surface = false
+
+# Keybindings
+keybind = ctrl+shift+c=copy_to_clipboard
+keybind = ctrl+shift+v=paste_from_clipboard
+keybind = ctrl+shift+n=new_window
+keybind = ctrl+shift+t=new_tab
